fix: home and blogposts pages responsiveness
Home and blogposts pages tablet-size header was aligned vertical,
instead of horizontal (as they are in normal screen sizes and mobile).
This commit makes the tablet-size header aligned with other.

Also the blogpost images were not aligned with caption in tablet and
mobile sizes. This commit aligns them all.

--- a/css/core/postbox.css
+++ b/css/core/postbox.css
@@ -16,6 +16,7 @@
   width: 180px;
   height: 180px;
   object-fit: cover;
+  border-radius: 8px;
 }
 
 .postbox-image-caption {
